# Computer-Vision

./: .gitignore
LAB2/: CMakeLists.txt  main.cpp
LAB3/: CMakeLists.txt  main.cpp
LAB3_VS/: LAB3_VS.sln
LAB3_VS/LAB3_VS/: LAB3_VS.cpp  LAB3_VS.vcxproj  LAB3_VS.vcxproj.filters
LAB4/: CMakeLists.txt  main.cpp
LAB5/C++/: CMakeLists.txt  main.cpp
LAB5/C++/image_meger/: CMakeLists.txt  main.cpp
LAB5/C++/image_splitter/: CMakeLists.txt  main.cpp
LAB5/Python/: CNN_classification.py  CNN_model.pkl
Template/: CMakeLists.txt
